[metadata]
name = Mykro-Common
description = Part of Mykro Micro-services. Package with common functionality used by Mykro-services.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Cielquan/mykro_common
author = Christian Riedel
license = GPL-3.0
license_file = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
keywords =
maintainer = Christian Riedel
maintainer-email = cielquan@protonmail.com
project_urls =
    Source=https://github.com/Cielquan/mykro-common
    Documentation=https://mykro-common.readthedocs.io/
    Tracker=https://github.com/Cielquan/mykro-common/issues


[options]
packages = find:
install_requires =
    flask>=1,<2
    'cachetools',
    'docker',
    'flask-httpauth',
    'python-etcd',
    pyjwt>=1.7,<2
    requests>=2.23,<3
    voluptuous>=0.11,<1
python_requires = ~=3.6
package_dir =
    =src


[options.extras_require]
docs =
    sphinx>=2.0,<3
    sphinx-rtd-theme>=0.4
    sphinx-autodoc-typehints>=1.10,<2
testing =
    pytest>=5.0,<6
    pytest-cov>=2.5,<3
    pytest-xdist>=1.31,<2


[options.packages.find]
where = src


[bdist_wheel]
universal = 0
